--- a/society_main/templates/society_main/1.html
+++ b/society_main/templates/society_main/1.html
@@ -1,171 +1,75 @@
 <div class="container-fluid">
     <div class="row mb-4">
-        <div class="col-md-6, col-lg-8, col-sm-12">
-            <p class="mx-auto d-block img-fluid article-img rounded">
-                <img src="../../../static/society_main/images/optimist-8-07-2021.jpg">
+        <div class="col-md-2"></div>
+        <div class="col-md-8, col-sm-12">
+            <div class="p-5">
+                <strong>
+                    <span style="color: #993366;">
+                        <span style="color: #008080;">
+                            В Новороссийске  в кинотеатре  «Нептун» состоялось торжество по случаю пятилетия  некоммерческой
+                            организации людей с ограниченными возможностями здоровья «ОПТИМИСТ».
+                        </span>
+                    </span>
+                </strong>
+                <p class="mx-auto d-block img-fluid article-img rounded">
+                    <img src="../../../static/society_main/images/articles/art2/optimist-8-07-2021.jpg" class="justify-content-center">
+                </p>
+            </div>
+
+            Пришли на мероприятие 75 человек. В «ОПТИМИСТЕ» люди с разными проблемами здоровья, в том числе и
+            колясочники, но все они хотят общаться и жить полноценной жизнью: ездить на экскурсии, жарить шашлыки,
+            любоваться природой, кататься на лодках, иметь единомышленников. Многие из них в обществе давно, но были на
+            мероприятии несколько новых человек, которые только услышали про это общество и заинтересовались им.
+
+
+            <p class="mx-auto d-block img-fluid rounded">
+                <img src="../../../static/society_main/images/articles/art2/optimist-1.jpg" class="justify-content-center">
+                <br>
+
+                Организовал общество «ОПТИМИСТ» в 2018 году Сергей Леонидович Мельников, который старался всегда
+                заботиться о своих подопечных, стремился, чтобы общество «ОПТИМИСТ» было единой семьей. Он сам был
+                тяжело болен, и тем не менее в его сердце находилось место для всех оптимистов. В феврале этого года
+                Сергея Леонидовича не стало.
+
+                <img src="../../../static/society_main/images/articles/art2/optimist-2.jpg" class="justify-content-center">
+            <p class="text-bold">На фото: поездка в х. Горный. 29/12/2022 г.</p>
+            <br>
+
+            Перед гостями выступил учредитель НГО «ОПТИМИСТ» Гаврилов Валерий Александрович. Он поздравил всех с
+            пятилетием, рассказал, что идет процесс переоформления документов огранизации в юстиции, сообщил о ближайших
+            планах на будущее, поведал о том, что «ОПТИМИСТ» обращался в администрацию по поводу выделения помещения, но
+            пока получил отказ.
+
+            <img src="../../../static/society_main/images/articles/art2/optimist-3.jpg" class="justify-content-center">
+
+            Помимо этого в зале прозвучало еще много добрых слов в адрес «ОПТИМИСТА». Семья Ивановых, Людмила Николаевна
+            и ее супруг Анатолий Иванович, сказали, что они просто счастливы от того, что познакомились с этой
+            организацией. «Действительно, хочется куда-то поехать, что-то новое посмотреть. А это далеко не всегда под
+            силу, особенно людям в возрасте. Здесь же все организуют, отвезут и привезут. Спасибо Вам, организаторы,
+            учредители, волонтеры, активисты. За то, что вы есть, за то, что вы рядом, за то, что на вас можно
+            положиться» - поделилась Людмила Николаевна.
+
+            <img src="../../../static/society_main/images/articles/art2/optimist-4.jpg" class="justify-content-center">
+            <p class="text-bold">На фото: супруги Ивановы.</p>
+            <br>
+
+            Встреча прошла в теплой дружественной обстановке и закончилась просмотром кинофильма «Хитровка. Знак
+            четырёх».
+
+            В планах «ОПТИМИСТА» до конца 2023 года поездка на термальные источники Лагонаки, прогулка по Абрау,
+            Солнечный остров в Анапе, хутор Горный, Шато-пино, Старый парк, ромашковая поляна, цветущие лотосы и многое
+            другое.
+
+            <img src="../../../static/society_main/images/articles/art2/optimist-5.jpg" class="justify-content-center">
+            <p class="text-center">***До новых встреч в «ОПТИМИСТЕ»!</p>
+
+            <img src="../../../static/society_main/images/articles/art2/optimist-6.jpg">
+
+            <p>
+                Автор: тест: Марина ДАРКИНА, фото предоставлено группой "ОПТИМИСТ"
+                10.09.2021 18:46
             </p>
+            <div class="col-md-2"></div>
         </div>
-        - Сергей Леонидович, расскажите, как начиналась Ваша общественная деятельность?
-
-        - Я еще со школы чувствовал, что у меня есть проблемы со здоровьем. И в 1995 году у меня проявилось сильное
-        заболевание щитовидной железы. Я был как слон. Руки опухшие, пальцы сардельками, ничего не сгибается. Говорить
-        не мог, потому что язык опухал. В итоге я получил группу инвалидности. А затем вступил в Общество инвалидов,
-        председателем которого была Рулева Алла Николаевна. Там я начал заниматься организацией различных экскурсий,
-        походов в кино, театр, выставочные залы и т.д. Раньше никто этим конкретно не занимался. И у меня как-то сразу
-        начало получаться. А это дает вдохновение, силы придает. Ну, и понеслось...
-
-
-        <p class="mx-auto d-block img-fluid rounded">
-            <img src="../../../static/society_main/images/vizitk.jpg">
-
-
-            Вот с 2000 года примерно я всем этим занимаюсь. К 2018 году я вышел из Общества инвалидов и создал
-            организацию
-            «Оптимист» для детей и взрослых, имеющих проблемы со здоровьем. Почему такое название? Потому что оптимист,
-            конечно, не путешественник, но всегда на подъеме духа.
-
-            - А Вы все это делаете на подъеме духа?
-
-            <img src="../../../static/society_main/images/optimist-2.jpg">
-        <p class="text-center">Поездка на лотосы.</p>
-
-        - Года два назад в новой школе в 13-ом микрорайоне был круглый стол. Приезжали представители из Краснодара и
-        спрашивали: «Зачем Вы все это делаете?». Я ответил: «Люди сидят по домам, не то что сутками, а годами. Они не
-        выходят никуда, потому что, во-первых, нет денег, во-вторых, нет силы, которая подымет их и вытащит из дома».
-        Они
-        только поддакивают.
-
-        - Почему Вам так важно жить не только для себя, но и для «Оптимиста»?
-
-        <img src="../../../static/society_main/images/optimist-3.jpg">
-
-        - Потому что человек должен нести в мир добро, причем должен делать это безвозмездно. Человек, который приходит
-        в
-        Общество инвалидов либо в «Оптимист», не должен работать за деньги. Если он пришел зарабатывать, то с него
-        отдачи
-        никакой не будет.
-
-        -В какие интересные места Ваша группа уже ездила?
-
-        - Мы много где были. В Краснодаре в парке Галицкого, в Кабардинке все осмотрели, ездили в Абинск на ромашковую
-        поляну, в Голубицкую на крокодиловую ферму, в Керчи были три раза, посещали гору Митридат, видели Крымский мост.
-        В
-        Новороссийске ходили в городской театр, кинотеатр Нептун, исторический музей, планетарий, океанариум, хоть он у
-        нас
-        и маленький, на двух паровозиках, которые в парке Фрунзе и в парке Ленина, катались. Все, что недалеко за
-        городом
-        находится, посетили: Абрау-Дюрсо, культурно-туристический комплекс «Россия» в Глебовке, в парке живой природы
-        «Додо», совсем недавно ездили на Кипарисовое озеро в Сукко, в гольф-клуб в Раевской. В общем, практически все,
-        что в
-        дневной доступности, мы посетили. Я пытался прорабатывать маршруты даже в сторону Сочи, и хотя это пока
-        дороговато,
-        я что-нибудь придумаю.
-
-        <img src="../../../static/society_main/images/optimist-4.jpg">
-
-        - Какая из этих поездок запомнилась больше всего?
-
-        - Каждая поездка - это маленькая история, везде есть какие-то свои нюансы и запоминающиеся моменты. Например, у
-        нас
-        появилась новая женщина, Оксана Харьковская, она на каждую поездку сочиняет стихи. Когда приезжаем в лес,
-        женщины
-        любят ходить по лесу и обнимать деревья, это у них называется соединение с природой. Если есть купель, все
-        всегда
-        купаются, несмотря на ледяную воду, и никто при этом не заболевает. Много любопытных эпизодов есть.
-
-        - Вы экскурсии организовываете общие для детей и взрослых? Или отдельно собираете детей, а отдельно взрослых?
-
-        - По-всякому бывает. С детскими экскурсиями сложнее, дети очень плохо собираются. Набрать 50 человек с мамами
-        очень
-        сложно. А надо полный автобус набрать, чтобы поездка состоялась. Поэтому я часто набираю смешанные группы:
-        половина
-        детей с мамами, половина взрослые.
-
-
-        <img src="../../../static/society_main/images/optimist-5.jpg">
-
-        - Сколько человек в «Оптимисте»?
-
-        - В организации порядка 200 человек детей и взрослых. Я когда-то думал, наберу 100 человек и хватит. А сейчас
-        уже
-        200, и народ постепенно идет, идет, идет... Порядка 10 человек колясочников детей. Я с каждым из них
-        разговаривал.
-        Но они все неподъемные, поэтому сидят дома и никуда не ходят. С волонтером Малхасян Наирой мы пытались
-        организовать
-        детей. Но ничего не получается, потому что дети грузные, их вытащить тяжело, а мамы часто одни, папы уходят.
-        Ведь
-        даже с кровати на коляску пересадить инвалида нужна немалая физическая сила.
-
-
-        <img src="../../../static/society_main/images/optimist-6.jpg">
-        <p class="text-center">На выставке интерактивного музея нового поколения "Фестиваль Роботов"</p>
-
-        - Сергей Леонидович, у Вас много помощников?
-
-        - Да. Это наши активисты, Марина Каргина, Елена Ласковец, Татьяна Савина, Трубоенко Светлана, Гаврилов Валера,
-        Рябова Светлана. Они помогают мне в организации мероприятий. Многие из них очень больны, но, тем не менее,
-        находят в
-        себе силы участвовать в общественной жизни.
-
-        <img src="../../../static/society_main/images/optimist-7.jpg">
-
-        -Есть еще несколько человек, которых я принял волонтерами к себе. Они везде с нами ездят при условии, что будут
-        помогать инвалидам. Но, к сожалению, они готовы только куда-то с нами ходить, а вот съездить проведать кого-то в
-        больнице или на дому, выйти с кем-нибудь из инвалидов погулять от них не допросишься.
-
-        - Что Вас расстраивает?
-
-        - Необязательность людей, их хитрость. В каждой поездке кто-то опаздывает, кто-то совсем не приходит и даже не
-        оповещает об этом, а я же жду, человек записан у меня! Многие мамы спрашивают, дескать, у меня трое детей, один
-        из
-        них инвалид, как я одного поведу, а других нет? Но ведь места выделили инвалидам. Сами же родители других
-        инвалидов
-        обидятся. Но я все равно не бросаю это дело. Для меня самое главное - конечный результат. Поехали - здорово! Вот
-        тогда у меня душа спокойна. Радуюсь. А в процессе, конечно, нервничаю, психую, всякое в жизни бывает. Все на
-        эмоциях. Но останавливаться нельзя, потому что остановишься, опустишь ручки, и все. Тут надо вперед, вперед!
-
-        <img src="../../../static/society_main/images/optimist-8.jpg">
-        <p class="center">Посещение выставки живых тропических бабочек в Новороссийске</p>
-
-
-        -Кто же оказывает помощь «Оптимисту»?
-
-        - «Оптимист» выражает благодарность директору ООО «Черномортрансфлот» Челдышниковой Виктории Александровне за
-        организацию увлекательных прогулок на катере. Большое спасибо директору МУП «Детско-юношеский кинотеатр «Нептун»
-        Кузнецовой Нине Владимировне. Благодаря акции «КиноСреда - День уходящего кино» в кинотеатре действует
-        специальная
-        цена на фильмы, 100 рублей. И мы имели возможность посмотреть на большом экране кинофильмы «Братья медведи:
-        Тайна
-        трех миров», «Время» и многие другие.; И еще «Оптимист» очень благодарен директору МАУ «Новороссийский городской
-        театр» Бередину Олегу Геннадьевичу. Мы посмотрели многие постановки нашего театра, посетили концерты
-        симфонического
-        оркестра, концерт четы Печенкиных и многие другие, и все это практически бесплатно. Мы всем им очень благодарны.
-
-        <img src="../../../static/society_main/images/optimist-9.jpg">
-
-        На самом деле мы будем рады любой спонсорской помощи: современному компьютеру, помещению, материальной помощи.
-        Связаться со мной можно по телефону 89676681657. Звоните, и люди Вам будут благодарны.
-
-        - Сергей Леонидович, каковы Ваши дальнейшие планы?
-
-        - У меня есть надежда, что в сентябре или октябре мы поедем в Севастополь. Но это все очень дорого. Я планирую
-        эту
-        поездку с ночевкой. Доехать до Севастополя, там переночевать, и обратно через Ялту, Симферополь поехать. Тем
-        более у
-        меня в Севастополе дедушка в танке сгорел во время войны, для меня это памятные места.
-
-        <img src="../../../static/society_main/images/optimist-10.jpg">
-
-        P.S. Так откуда же оптимизм в «Оптимисте»? Сейчас трудное время, денег нет, работы нет, за все надо платить,
-        даже за
-        всякую мелочь, и особенно трудно людям больным, слабым, пожилым, инвалидам. Да и заработать они сейчас уже
-        практически не могут. А Сергей Леонидович - этот воистину горящий желанием помочь человек скрашивает их жизнь, и
-        это
-        достойно огромного уважения. Для меня это человек с большой буквы.
-
-        <p>
-            Автор: тест: Марина ДАРКИНА, фото предоставлено группой "ОПТИМИСТ"
-            10.09.2021 18:46
-        </p>
     </div>
 </div>
