--- a/society_main/templates/society_main/contacts.html
+++ b/society_main/templates/society_main/contacts.html
@@ -50,7 +50,7 @@
   <div class="mb-3 form-group d-flex align-items-start">
     <label for="{{ form.checkbox.id_for_label }}" class="custom-checkbox ps-3">
       {{ form.checkbox }}
-      <a class="no-underline " href="{% url 'policy' %}">
+      <a class="no-underline " href="{% url 'policy' %}" target="_blank">
       <p class=" mt-2 ps-3"> Я даю своё согласие на обработку персональных данных в соответствии с политикой в отношении обработки персональных данных НГО «Оптимист»</p>
       </a>
     </label>
