--- a/society_main/templates/society_main/index.html
+++ b/society_main/templates/society_main/index.html
@@ -4,14 +4,14 @@
 {% block content %}
 
 
- <main>
+<main>
 
     <div class="container pt-5">
 
-      <h1 class="display-6 text-center">
-        Добро пожаловать в сообщество <br>
-        неунывающих людей <br>
-        <span class="animate-text">
+        <h1 class="display-6 text-center">
+            Добро пожаловать в сообщество <br>
+            неунывающих людей <br>
+            <span class="animate-text">
           <span>О</span>
           <span>п</span>
           <span>т</span>
@@ -35,45 +35,48 @@
           <span>к</span>
 
         </span>
-        <span class="static-text">Оптимист Новороссийск</span>
-      </h1>
+            <span class="static-text">Оптимист Новороссийск</span>
+        </h1>
     </div>
 
     <div id="carouselIndicators" class="carousel slide carousel" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="2"
-          aria-label="Slide 3"></button>
-      </div>
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+        </div>
 
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="{% static 'society_main/images/Оптимист_квадрат.jpg' %}" class="img-fluid rounded d-block w-100" alt="Логотип Оптимист для карусели">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="{% static 'society_main/images/Оптимист_квадрат.jpg' %}"
+                     class="img-fluid rounded d-block w-100" alt="Логотип Оптимист для карусели">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'society_main/images/image_(5).jpg' %}" class="img-fluid rounded d-block w-100"
+                     alt="Ещё один Логотип Оптимист для карусели">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'society_main/images/happy_peoples1.jpg' %}" class="img-fluid rounded d-block w-100"
+                     alt="Фото Оптимистов для карусели">
+            </div>
         </div>
-        <div class="carousel-item">
-          <img src="{% static 'society_main/images/image_(5).jpg' %}" class="img-fluid rounded d-block w-100" alt="Ещё один Логотип Оптимист для карусели">
-        </div>
-        <div class="carousel-item">
-          <img src="{% static 'society_main/images/happy_peoples1.jpg' %}" class="img-fluid rounded d-block w-100" alt="Фото Оптимистов для карусели">
-        </div>
-      </div>
 
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
 
     </div>
 
 
-  </main>
+</main>
 
 
 {% endblock %}
