--- a/society_main/templates/society_main/components/footer.html
+++ b/society_main/templates/society_main/components/footer.html
@@ -7,7 +7,7 @@
         <div class="col-md-4 text-center text-md-start">
           <p class="fw-bold ms-auto">
             Адрес: Краснодарский край, Новороссийск <br>
-            Телефон: +7 (928) 881-15-09 <br>
+            Телефон: <a href="tel:+79288811509" class="no-underline">+7 (928) 881-15-09</a><br>
             E-mail: optimistnovoross2018@gmail.com <br>
             Соц.Сети:
             <span class="social-icons">
