--- a/society_main/templates/society_main/contacts.html
+++ b/society_main/templates/society_main/contacts.html
@@ -20,7 +20,7 @@
 
   <h4 class="mt-4"><span class="fw-bold">Председатель НГО:</span></h4>
   <p class="ms-4 fs-5 fw-bold">Гаврилов Валерий Андреевич</p>
-  <p class="ms-4"><span class="fw-bold">Телефон:</span> +7 (928) 881-15-09</p>
+  <p class="ms-4"><span class="fw-bold">Телефон:</span> <a href="tel:+79288811509" class="no-underline">+7 (928) 881-15-09</a></p>
   <p class="ms-4"><span class="fw-bold">Email:</span> optimistnovoross2018@gmail.com</p>
 
 </div>
