add file_storage app in project

--- a/society_main/static/society_main/css/style.css
+++ b/society_main/static/society_main/css/style.css
@@ -374,3 +374,10 @@ h5 {
     background-color: #ddd;
 }
 
+.custom-section {
+    background-color: inherit;
+}
+.custom-img {
+    max-width: 100%;
+    height: auto;
+    margin: 0 auto;
