--- a/society_main/templates/society_main/1.html
+++ b/society_main/templates/society_main/1.html
@@ -3,73 +3,60 @@
         <div class="col-md-2"></div>
         <div class="col-md-8, col-sm-12">
             <div class="p-5">
-                <strong>
-                    <span style="color: #993366;">
-                        <span style="color: #008080;">
-                            В Новороссийске  в кинотеатре  «Нептун» состоялось торжество по случаю пятилетия  некоммерческой
-                            организации людей с ограниченными возможностями здоровья «ОПТИМИСТ».
-                        </span>
-                    </span>
-                </strong>
                 <p class="mx-auto d-block img-fluid article-img rounded">
-                    <img src="../../../static/society_main/images/articles/art2/optimist-8-07-2021.jpg" class="justify-content-center">
+                    <img src="../../../media/imgs_st/2023.12.19/opt-4.jpg">
                 </p>
             </div>
 
-            Пришли на мероприятие 75 человек. В «ОПТИМИСТЕ» люди с разными проблемами здоровья, в том числе и
-            колясочники, но все они хотят общаться и жить полноценной жизнью: ездить на экскурсии, жарить шашлыки,
-            любоваться природой, кататься на лодках, иметь единомышленников. Многие из них в обществе давно, но были на
-            мероприятии несколько новых человек, которые только услышали про это общество и заинтересовались им.
-
-
-            <p class="mx-auto d-block img-fluid rounded">
-                <img src="../../../static/society_main/images/articles/art2/optimist-1.jpg" class="justify-content-center">
-                <br>
-
-                Организовал общество «ОПТИМИСТ» в 2018 году Сергей Леонидович Мельников, который старался всегда
-                заботиться о своих подопечных, стремился, чтобы общество «ОПТИМИСТ» было единой семьей. Он сам был
-                тяжело болен, и тем не менее в его сердце находилось место для всех оптимистов. В феврале этого года
-                Сергея Леонидовича не стало.
-
-                <img src="../../../static/society_main/images/articles/art2/optimist-2.jpg" class="justify-content-center">
-            <p class="text-bold">На фото: поездка в х. Горный. 29/12/2022 г.</p>
-            <br>
-
-            Перед гостями выступил учредитель НГО «ОПТИМИСТ» Гаврилов Валерий Александрович. Он поздравил всех с
-            пятилетием, рассказал, что идет процесс переоформления документов огранизации в юстиции, сообщил о ближайших
-            планах на будущее, поведал о том, что «ОПТИМИСТ» обращался в администрацию по поводу выделения помещения, но
-            пока получил отказ.
-
-            <img src="../../../static/society_main/images/articles/art2/optimist-3.jpg" class="justify-content-center">
-
-            Помимо этого в зале прозвучало еще много добрых слов в адрес «ОПТИМИСТА». Семья Ивановых, Людмила Николаевна
-            и ее супруг Анатолий Иванович, сказали, что они просто счастливы от того, что познакомились с этой
-            организацией. «Действительно, хочется куда-то поехать, что-то новое посмотреть. А это далеко не всегда под
-            силу, особенно людям в возрасте. Здесь же все организуют, отвезут и привезут. Спасибо Вам, организаторы,
-            учредители, волонтеры, активисты. За то, что вы есть, за то, что вы рядом, за то, что на вас можно
-            положиться» - поделилась Людмила Николаевна.
-
-            <img src="../../../static/society_main/images/articles/art2/optimist-4.jpg" class="justify-content-center">
-            <p class="text-bold">На фото: супруги Ивановы.</p>
-            <br>
-
-            Встреча прошла в теплой дружественной обстановке и закончилась просмотром кинофильма «Хитровка. Знак
-            четырёх».
-
-            В планах «ОПТИМИСТА» до конца 2023 года поездка на термальные источники Лагонаки, прогулка по Абрау,
-            Солнечный остров в Анапе, хутор Горный, Шато-пино, Старый парк, ромашковая поляна, цветущие лотосы и многое
-            другое.
-
-            <img src="../../../static/society_main/images/articles/art2/optimist-5.jpg" class="justify-content-center">
-            <p class="text-center">***До новых встреч в «ОПТИМИСТЕ»!</p>
-
-            <img src="../../../static/society_main/images/articles/art2/optimist-6.jpg">
-
-            <p>
-                Автор: тест: Марина ДАРКИНА, фото предоставлено группой "ОПТИМИСТ"
-                10.09.2021 18:46
-            </p>
-            <div class="col-md-2"></div>
-        </div>
+  <div class="row">
+    <div class="col-md-6">
+          <p> 1992 году Генеральная Ассамблея ООН учредила 3 декабря каждого года Международным днем инвалидов.</p>
+           <p> Глвная цель ее учреждения - повышение осведомленности и поддержка важных вопросов, касающихся людей с инвалидностью,
+              их участия как в общественных событиях, так и в процессах развития.</p>
     </div>
+
+    <div class="col-md-6">
+      <img src="../../../media/imgs_st/2023.12.19/opt-4.jpg" class="img-fluid">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <img src="image2.jpg" class="img-fluid">
+    </div>
+
+    <div class="col-md-6">
+     <p>Текст второго блока</p>
+     <p>И еще текст</p>
+    </div>
+  </div>
+
 </div>
+
+
+<!--    &lt;!&ndash; Второй блок &ndash;&gt;-->
+<!--    <div class="row">-->
+<!--      <div class="col-md-6">-->
+<!--        <img src="image2.jpg" alt="Изображение 2" class="custom-img">-->
+<!--      </div>-->
+<!--      <div class="col-md-6">-->
+<!--        <div class="custom-section">-->
+<!--          <h2>Здесь еще один заголовок</h2>-->
+<!--          <p>Некоторый дополнительный текст для второго блока.</p>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+
+<!--    &lt;!&ndash; Третий блок &ndash;&gt;-->
+<!--    <div class="row">-->
+<!--      <div class="col-md-6">-->
+<!--        <div class="custom-section">-->
+<!--          <h2>Еще один заголовок</h2>-->
+<!--          <p>Дополнительный текст для третьего блока.</p>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="col-md-6">-->
+<!--        <img src="image3.jpg" alt="Изображение 3" class="custom-img">-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
