--- a/society_main/templates/society_main/components/footer.html
+++ b/society_main/templates/society_main/components/footer.html
@@ -11,8 +11,8 @@
             E-mail: optimistnovoross2018@gmail.com <br>
             Соц.Сети:
             <span class="social-icons">
-              <a href="https://t.me/django_selfedu" target="_blank">
-                <i class="fa-brands fa-telegram fa-lg"></i></a>
+<!--              <a href="https://t.me/django_selfedu" target="_blank">-->
+<!--                <i class="fa-brands fa-telegram fa-lg"></i></a>-->
               <a href="https://vk.com/id662546453" target="_blank">
                 <i class="fa-brands fa-vk fa-lg"></i></a>
               <a href="https://ok.ru/profile/598093818404" target="_blank">
