--- a/society_main/templates/society_main/contacts.html
+++ b/society_main/templates/society_main/contacts.html
@@ -16,7 +16,7 @@
 <div class="col-md-6">
 
   <h3 class="mt-4"><span class="fw-bold">Адрес:</span></h3>
-  <p class="ms-4">г. Новороссийск, ул. Ленина, д. 5, офис 123</p>
+  <p class="ms-3">353905, г. Новороссийск, ул. Набережная Адмирала Серебрекова, д. 39, кв. 53</p>
 
   <h4 class="mt-4"><span class="fw-bold">Председатель НГО:</span></h4>
   <p class="ms-4 fs-5 fw-bold">Гаврилов Валерий Андреевич</p>
