--- a/society_main/templates/society_main/post.html
+++ b/society_main/templates/society_main/post.html
@@ -1,32 +1,10 @@
 {% extends 'society_main/base.html' %}
 
-{% block breadcrumbs %}
-<!-- Теги -->
-{% with post.tags.all as tags %}
-{% if tags %}
-<div class="container mt-3">
-  <div class="row">
-      <div class="col-sm-12, col-md-6, col-lg-4, col-12">
-  <ul class="list-group">
-    <li class="list-group-item active">Теги:</li>
-      {% for t in tags %}
-      <li class="list-group-item"><a href="{{t.get_absolute_url}}">{{t.tag}}</a></li>
-      {% endfor %}
-  </ul>
-</div>
-{% endif %}
-{% endwith %}
-{% endblock %}
-    </div>
-  </div>
 
 {% block content %}
+
 <div class="container mt-5">
-  <div class="row">
-    <div class="col-sm-12, col-md-6, col-lg-4, col-12">
-  <h1 class="pb-5 fw-bold display-6">{{ post.title }}</h1>
-      </div>
-    </div>
+  <h1 class="fw-bold display-6">{{ post.title }}</h1>
 
 {% if post.video %}
 <div class="collapse" id="collapseExample">
@@ -58,15 +36,10 @@
   {% autoescape off %}
     <div class="row">
     <div class="col-sm-12, col-md-6, col-lg-8, col-12">
-        <p class="lead text-justify">{{ post.content|linebreaks }}</p>
+        <p class="lead ">{{ post.content|linebreaks }}</p>
       </div>
     </div>
 
   {% endautoescape %}
 </div>
 {% endblock %}
-
-<a href="https://www.voi.ru/ludyam_s_invalidnostiu//oformlenie_invalidnosti_i_poluchenie_tsr//poryadok_oformleniya_invalidnosti#tab-checkbox-12367"><strong>Источник</strong></a>
-
-<h2 class="display-6">Что делать, если не согласен с решением бюро медико-социальной экспертизы?</h2>
-<br>
