add alert in index.html and IndexView

--- a/society_main/static/society_main/css/style.css
+++ b/society_main/static/society_main/css/style.css
@@ -374,10 +374,9 @@ h5 {
     background-color: #ddd;
 }
 
-.custom-section {
-    background-color: inherit;
+.uppercase-text {
+    text-transform: uppercase;
+    font-variant: small-caps;
 }
-.custom-img {
-    max-width: 100%;
-    height: auto;
-    margin: 0 auto;
+
+
