--- a/society_main/templates/society_main/1.html
+++ b/society_main/templates/society_main/1.html
@@ -1,62 +1,24 @@
-<div class="container-fluid">
-    <div class="row mb-4">
-        <div class="col-md-2"></div>
-        <div class="col-md-8, col-sm-12">
-            <div class="p-5">
-                <p class="mx-auto d-block img-fluid article-img rounded">
-                    <img src="../../../media/imgs_st/2023.12.19/opt-4.jpg">
-                </p>
-            </div>
+17 сентября 2023 г группа ОПТИМИСТ  совершила вылазку в хутор Горный.
+С начало сходили в храм, послушали службу,  заказали Божественную литургию, помолились, причастились.
 
-  <div class="row">
-    <div class="col-md-6">
-          <p> 1992 году Генеральная Ассамблея ООН учредила 3 декабря каждого года Международным днем инвалидов.</p>
-           <p> Глвная цель ее учреждения - повышение осведомленности и поддержка важных вопросов, касающихся людей с инвалидностью,
-              их участия как в общественных событиях, так и в процессах развития.</p>
-    </div>
+    <p class="mx-auto d-block img-fluid rounded">
+        <img src="../../../static/society_main/images/articles/art5/opt-1.jpg">
 
-    <div class="col-md-6">
-      <img src="../../../media/imgs_st/2023.12.19/opt-4.jpg" class="img-fluid">
-    </div>
-  </div>
+Затем гуляли по красивейшему ущелью, покрытому лесом, слушали пение птиц и самое главное дышали чистейшим воздухом.
 
-  <div class="row">
-    <div class="col-md-6">
-      <img src="image2.jpg" class="img-fluid">
-    </div>
+    <img src="../../../static/society_main/images/articles/art5/opt-7.jpg">
 
-    <div class="col-md-6">
-     <p>Текст второго блока</p>
-     <p>И еще текст</p>
-    </div>
-  </div>
+Провели импровизированный концерт «Здравствуй ОСЕНЬ». Наша ведущая Светлана Эдуардовна загадывала загадки, а мы пытались отгадать. Правда не всегда получалось. Те кто отгадывал получал ФАНТ.
 
-</div>
+    <img src="../../../static/society_main/images/articles/art5/opt-4.jpg">
 
+Татьяна Кириченко читала стихи советских поэтов.
+Устроили костюмированную фотоссесию на пасеке.
 
-<!--    &lt;!&ndash; Второй блок &ndash;&gt;-->
-<!--    <div class="row">-->
-<!--      <div class="col-md-6">-->
-<!--        <img src="image2.jpg" alt="Изображение 2" class="custom-img">-->
-<!--      </div>-->
-<!--      <div class="col-md-6">-->
-<!--        <div class="custom-section">-->
-<!--          <h2>Здесь еще один заголовок</h2>-->
-<!--          <p>Некоторый дополнительный текст для второго блока.</p>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
+  <img src="../../../static/society_main/images/articles/art5/opt-3.jpg">
 
-<!--    &lt;!&ndash; Третий блок &ndash;&gt;-->
-<!--    <div class="row">-->
-<!--      <div class="col-md-6">-->
-<!--        <div class="custom-section">-->
-<!--          <h2>Еще один заголовок</h2>-->
-<!--          <p>Дополнительный текст для третьего блока.</p>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="col-md-6">-->
-<!--        <img src="image3.jpg" alt="Изображение 3" class="custom-img">-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
+Все было просто замечательно.
+
+       <img src="../../../static/society_main/images/articles/art5/opt-6.jpg">
+
+И отдохнувшие поехали домой, снова к рабочей неделе.
