--- a/society_main/templates/society_main/index.html
+++ b/society_main/templates/society_main/index.html
@@ -3,8 +3,18 @@
 
 {% block content %}
 
-
 <main>
+
+    <div class="uppercase-text">
+        {% if show_announcement %}
+        <div class="alert alert-info alert fade show d-flex justify-content-between align-items-center" role="alert">
+            <p>городская общественная некоммерческая организация людей с ограниченными возможностями здоровья «оптимист»
+            опубликовала ежегодный  <a href="http://127.0.0.1:8000/category/publications/">  отчёт</a>
+            </p>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endif %}
+    </div>
 
     <div class="container pt-5">
 
